# shapv1

./: .gitignore  CLAUDE.md  deploy_server.sh  environment.yml  pyproject.toml  requirements.txt  run.py  run_all.sh  shap_drift_results.html
docs/: theory.md
shap_drift/: __init__.py  config.py
shap_drift/ablation/: __init__.py  alpha_selection.py  prior_weight.py  sample_strategy.py
shap_drift/case_study/: __init__.py  runner.py
shap_drift/correction/: __init__.py  baselines.py  fsc.py  sadc.py  sdc.py
shap_drift/datasets/: __init__.py  adult.py  california_housing.py  covtype.py  credit_card_fraud.py  diabetes.py  german_credit.py  heart_disease.py  higgs.py  injury_1798.py  thyroid.py
shap_drift/generators/: __init__.py  diffusion.py
shap_drift/metrics/: __init__.py  drift.py  quality.py
shap_drift/models/: __init__.py  explainers.py
shap_drift/visualization/: __init__.py  baseline_plots.py  correction_plots.py  drift_plots.py  style.py
