[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shap-drift"
version = "8.0.0"
description = "SHAP Explanation Drift Study — synthetic data SHAP consistency analysis"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "xgboost>=1.5,<3.0",
    "shap>=0.41.0",
    "matplotlib>=3.5",
    "seaborn>=0.11",
    "tqdm",
    "table-synthesizers>=0.1.0",
]

[project.optional-dependencies]
cuda = ["torch>=2.0,<2.6"]
dev = ["ipykernel", "jupyter"]

[project.scripts]
shap-drift = "run:main"

[tool.setuptools.packages.find]
include = ["shap_drift*"]
